k8s/test-k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
    env   : prod
    app   : main
    tier  : frontend
    owner : Kostik
spec:
  containers:
    - name : container-apache
    image: nginx:latest
    ports:
      - containerPort: 80
