k8s/test-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  ports:
  - port: 1234
    name: textnginx
    targetPort: 80
  selector:
    app: nginx-testhtml
  type: LoadBalancer
